# AuraWell_Agent

./: .cursorignore  .cursorindexingignore  .cursorrules  .env.template  .gitattributes  .gitignore  AI_HEALTH_PLAN_IMPLEMENTATION_REPORT.md  API_CONTRACT_AUDIT_REPORT.md  ARCHITECTURE_SUMMARY.md  AURAWELL_DEVELOPMENT_GUIDE.md  AURAWELL_FAMILY_AGENT_AUDIT_REPORT.md  AUTH_SECURITY_IMPLEMENTATION_REPORT.md  AuraWell_Frontend_Health_Check_Strategy.md  AuraWell_Frontend_Technical_Health_Report.md  AuraWell_前端升级PRD.md  AuraWell_功能测试报告.md  AuraWell_项目技术报告.md  AuraWell本地化开发环境改造计划.md  AuraWell项目代码质量审计与重构计划.md  AuraWell项目最终验收报告.md  AuraWell项目端到端测试计划与验收标准.md  CHANGELOG.md  CHANGELOG_PHASE_IV.md  CLEANUP_COMPLETION_REPORT.md  CONTRACT_GUARDIAN_MISSION_COMPLETE.md  CONTRACT_GUARDIAN_VERIFICATION.md  DATABASE_SETUP_SUMMARY.md  DEPENDENCY_SLIMMING_REPORT.md  FAMILY_INTERACTION_IMPLEMENTATION_REPORT.md  FINAL_TRIAL_CLEANUP_COMPLETION_REPORT.md  FRONTEND_BACKEND_COMMUNICATION_REPORT.md  FULL_FUNCTIONALITY_ASSESSMENT.md  HEALTH_TOOLS_DOCUMENTATION.md  HEALTH_TOOLS_EXPANSION_SUMMARY.md  HEALTH_TOOLS_OPTIMIZATION_REPORT.md  LANGCHAIN_MIGRATION_COMPLETE_REPORT.md  LANGCHAIN_MIGRATION_REPORT.md  LOGIN_FIX_REPORT.md  M1_COMPLETION_SUMMARY.md  MCP_TOOLS_REPAIR_REPORT.md  (+83 more)
.cursor/rules/: aurawell-project.mdc  mcp-integration.mdc
.github/workflows/: frontend.yml  tests.yml
.history/: analyze_db_20250609104757.py  analyze_db_20250609105043.py
.history/frontend/: package_20250608202339.json  package_20250608202750.json  vite.config_20250608202301.js  vite.config_20250608204526.js  vite.config_20250608204942.js  vite.config_20250608205336.js  vite.config_20250608214331.js  vite.config_20250608214414.js  vite.config_20250608214648.js
.history/tests/: test_api_interface_20250609110523.py
aurawell/: AB_test.py  UpdatePlan_2nd_version.md  __init__.py
aurawell/AIExtension/: __init__.py
aurawell/RAG_tests/: README.md  (+14 more)
aurawell_env/: pyvenv.cfg
aurawell_test_env/: pyvenv.cfg
deployment/: serverless.yml
docs/: API.md  API_CHANGELOG.md  API_DOCUMENTATION.md  API_EN.md  API_ENDPOINTS_SUMMARY.md  API_STATUS_CODE_GUIDE.md  BACKEND_UV_PATH_FIX.md  BUG_FIXES_SUMMARY.md  CHAT_SERVICE_FIX_SUMMARY.md  CI_CD_COMPLETE_SOLUTION_SUMMARY.md  CI_CD_COMPLETION_SUMMARY.md  CI_CD_FIX_REPORT.md  CI_CD_LOCAL_TEST_FINAL_SOLUTION.md  CI_CD_SETUP.md  Comprehensive_Project_Analysis.md  DEPLOYMENT.md  DEPLOYMENT_README.md  FAMILY_MANAGEMENT.md  FASTAPI_IMPLEMENTATION.md  FIXES_SUMMARY.md  LANGCHAIN_AGENT_FIXES_SUMMARY.md  LANGCHAIN_MIGRATION_PHASE1_SUMMARY.md  LOCAL_CI_TESTING_GUIDE.md  Product_Analysis.md  RESTRUCTURE_NOTES.md  ROLLUP_FIX_REPORT.md  SQLALCHEMY_INTEGRATION_SUMMARY.md  VERSION_MANAGEMENT.md  development_roadmap.md  family_architecture.md  frontend-optimization-plan.md  issue_28_fixed.md  issue_langchain_full_migration.md  login_test_report.md  tools_contract.md
examples/: basic_demo.py  basic_test.py  phase3_orchestrator_demo.py  phase4_gamification_demo.py  simplified_demo.py
frontend/: .cursorignore  .env.development  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  test_frontend_utils.cjs  tsconfig.json  tsconfig.node.json  vite.config.js  vitest.config.js
migrations/: env.py
nginx/: README.md  aurawell-ssl.conf  aurawell.conf  deploy_nginx.sh  manage_nginx.sh
scripts/: __init__.py  check_ci_config.sh  check_services.py  database_manager.py  demo_real_ai.py  deploy_mcp_config.ps1  deploy_production.py  final_acceptance_test.py  final_zero_config_verification.py  generate_api_docs.py  init_database.py  install_mcp_deps.py  manage_db.py  mcp_auto_setup.py  release.py  restart_aurawell_macos.sh  run_api_server.py  run_tests.py  run_tests.sh  start_aurawell_macos.sh  start_mcp_env.ps1  start_services.sh  stop_services.sh  test_apple_health_integration.py  test_full_e2e_flow.py  test_local_ci.sh  test_macos_scripts.sh  test_mcp_tools.py  test_real_deepseek.py  test_real_deepseek_api.py  verify_zero_config_startup.py
src/: upgrade_plan.md
tests/: AI_MODELS_TEST_SUMMARY.md  README.md  README_AI_TESTS.md  __init__.py  ab_test_results.json  comprehensive_test_report.txt  conftest.py  final_test_summary.md  fix_api_key_issues.py  performance_benchmark.py  quick_login_test.sh  quick_test.py  quick_test.sh  run_ai_tests.sh  run_model_tests.sh  run_tests.py  run_tests.sh  run_upgrade_tests.py  test_ContextMangement.py  test_IntensivePhrase.py  test_ai_agent_fixes.py  test_ai_models_availability.py  test_api_interface.py  test_basic.py  test_chat_service_debug.py  test_chat_service_with_credentials.py  test_ci_cd_setup.py  test_concurrent_stress.py  test_conversation_agent_fix.py  test_deepseek_v3_model.py  test_e2e_isolation.py  test_enhanced_rag.py  test_family_api.py  test_family_repository.py  test_family_service_transactions.py  test_health_constants.py  test_improvements.py  test_langchain_agent_fixes.py  test_login_firefox.py  test_mcp_integration.py  (+28 more)
(+449 files in other folders)
